--- a/config/static/config/css/base.css
+++ b/config/static/config/css/base.css
@@ -17,13 +17,16 @@
     font-family: "Poppins", sans-serif;
 }
 
+html {
+    position: absolute;
+}
+
 body {
     background-color: var(--pastel_purple);
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    /* min-height: 100vh; */
     overflow-x: hidden;
     font-size: 1.5em;
 }
