--- a/config/static/config/css/navbar.css
+++ b/config/static/config/css/navbar.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 2rem;
     top: 0px;
+    position: absolute;
 }
 
 .main-header__nav {
@@ -37,10 +38,10 @@
     color: var(--yellow);
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 640px){
     .main-header__item a {
         padding: 5px 10px 5px 5px;
-        font-size: 15px;
+        font-size: 13px;
     }
     .main-header__item {
         margin: 0rem;
