--- a/decks/static/decks/css/deck_list.css
+++ b/decks/static/decks/css/deck_list.css
@@ -112,3 +112,18 @@
         margin-top: 20px;
     }
 }
+
+@media only screen and (max-device-width: 640px) {
+    body, html {
+        width: 100%;
+        height: 100%;
+        clip: auto;
+        position: absolute;
+        overflow: hidden;
+    }
+    .btn {
+        font-size: 13px;
+        padding: 10px 8px;
+        margin-top: 18px;
+    }
+}
