--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -7,6 +7,7 @@
 <!--Login-->
 <div class="container py-5">
   <h1>Login</h1>
+  <p>Don't have an account? <a href="{% url 'register' %}">Create an account</a>.</p>
   {% if messages %}
   {% for message in messages %}
   <li class="alert alert-{{ message.tags }}">
@@ -19,7 +20,20 @@
     {{ login_form|crispy }}
     <button class="btn btn-primary" type="submit">Login</button>
   </form>
-  <p class="text-center">Don't have an account? <a href="{% url 'register' %}">Create an account</a>.</p>
 </div>
 
+{% endblock %}
+
+{% block style %}
+<style>
+	@media only screen and (max-device-width: 640px) {
+		body, html {
+        width: 100%;
+        height: 100%;
+  			clip: auto;
+  			position: absolute;
+  			overflow: hidden;
+		}
+	}
+</style>
 {% endblock %}
