--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -7,6 +7,7 @@
 <!--Register-->
 <div class="container py-5">
 	<h1>Register</h1>
+	<p >If you already have an account, login <a href="{% url 'login'%}">here</a> instead.</p>
 	{% if messages %}
 	{% for message in messages %}
 	<li class="alert alert-{{ message.tags }}">
@@ -19,7 +20,19 @@
 		{{ register_form|crispy }}
 		<button class="btn btn-primary" type="submit">Register</button>
 	</form>
-	<p class="text-center">If you already have an account, <a href="{% url 'login'%}">login</a> instead.</p>
 </div>
 
+{% endblock %}
+
+{% block style %}
+<style>
+	@media only screen and (max-device-width: 640px) {
+		body, html {
+			width: 100%;
+  			clip: auto;
+  			position: absolute;
+  			overflow: hidden;
+		}
+	}
+</style>
 {% endblock %}
