--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -26,14 +26,13 @@
 
 {% block style %}
 <style>
-	@media only screen and (max-device-width: 640px) {
-		body, html {
-        width: 100%;
-        height: 100%;
-  			clip: auto;
-  			position: absolute;
-  			overflow: hidden;
-		}
-	}
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: absolute;
+    clip: auto;
+  }
 </style>
 {% endblock %}
