--- a/decks/static/decks/css/deck_list.css
+++ b/decks/static/decks/css/deck_list.css
@@ -113,7 +113,7 @@
     }
 }
 
-@media only screen and (max-device-width: 480px) {
+@media only screen and (max-width: 480px) {
     body, html {
         width: 100%;
         height: 100%;
