--- a/dictionary/static/css/dictionary/word_search.css
+++ b/dictionary/static/css/dictionary/word_search.css
@@ -171,7 +171,7 @@ ul .content::-webkit-scrollbar {
     width: 0px;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 600px) and (min-width: 501px){
     .wrapper {
         width: 400px;
     }
@@ -189,5 +189,28 @@ ul .content::-webkit-scrollbar {
     .cards {
         padding: 5px;
         margin: 5px;
+    }
+}
+
+@media only screen and (max-width : 480px){
+    html, body {
+      width: 100%;
+      /* height: 100%; */
+      overflow-x: hidden;
+      position: absolute;
+    }
+
+    .wrapper {
+        height: 100%;
+    }
+
+    .container {
+        font-size: 12px;
+    }
+    .wrapper {
+        width: 300px;
+    }
+    .card {
+        width: 80%;
     }
 }
