--- a/dictionary/static/css/dictionary/word_detail.css
+++ b/dictionary/static/css/dictionary/word_detail.css
@@ -98,15 +98,13 @@ select {
     font-size: 1.5rem;
 }
 
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 1200px){
     .card {
         width: 100%;
     }
-}
-
-@media only screen and (max-width: 1200px) and (min-width: 801px){
-    .card {
-        width: 45%;
-        margin-right: 10px;
-    }
+    html, body {
+        width: 100%;
+        overflow-x: hidden;
+        position: absolute;
+      }
 }
