--- a/config/templates/config/help_page.html
+++ b/config/templates/config/help_page.html
@@ -35,3 +35,14 @@
     </div>
 </div>
 {% endblock %}
+
+{% block style %}
+<style>
+    @media only screen and (max-width : 600px){
+    html, body {
+      width: 100%;
+      position: absolute;
+    }
+}
+</style>
+{% endblock %}
