progress page responsive

--- a/decks/templates/decks/progress.html
+++ b/decks/templates/decks/progress.html
@@ -29,6 +29,15 @@
 </div>
 {% endblock %}
 
+{% block style %}
+<style>
+    html, body {
+      width: 100%;
+      position: absolute;
+    }
+</style>
+{% endblock %}
+
 {% load static %}
 {% block script %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
