review page responsive css

--- a/config/templates/config/help_page.html
+++ b/config/templates/config/help_page.html
@@ -28,7 +28,8 @@
             <ul>
                 <li>You can choose the provided prompt or create your own prompt from the list.</li>
                 <li>Click on the prompt to start the conversation.</li>
-                <li>Try to use the word you are learning as much as possible. Your word use will be recorded in the progress page.</li>
+                <li>Try to use the word you are learning as much as possible. Your word use will be recorded in the
+                    progress page.</li>
                 <li>End the conversation and check the review by hitting the 'End' button.</li>
             </ul>
         </div>
@@ -38,11 +39,11 @@
 
 {% block style %}
 <style>
-    @media only screen and (max-width : 600px){
-    html, body {
-      width: 100%;
-      position: absolute;
+    html,
+    body {
+        width: 100%;
+        position: absolute;
+        overflow-x: hidden;
     }
-}
 </style>
 {% endblock %}
