--- a/roleplay/templates/roleplay/prompt_list.html
+++ b/roleplay/templates/roleplay/prompt_list.html
@@ -77,6 +77,11 @@
 
 {% block style%}
 <style>
+    html, body {
+        width: 100%;
+        position: absolute;
+        overflow-x: hidden;
+    }   
     .checked {
         color: orange;
     }
