--- a/roleplay/static/roleplay/css/review.css
+++ b/roleplay/static/roleplay/css/review.css
@@ -1,3 +1,10 @@
+html,
+body {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
 .review_container {
     align-items: center;
     display: flex;
