--- a/decks/static/decks/css/deck_list.css
+++ b/decks/static/decks/css/deck_list.css
@@ -94,13 +94,24 @@
     background-color: blue;
 }
 
+@media only screen and (max-width: 1024px) {
+    body, html {
+        width: 100%;
+        height: 100%;
+        clip: auto;
+        position: absolute;
+        overflow: hidden;
+    }
+}
+
 @media only screen and (max-width: 600px){
     .deck {
-        height: 150px;
+        height: 170px;
     }
     .btn {
-        font-size: 12px;
-        padding: 10px 20px;
+        font-size: 10px;
+        padding: 12px 10px;
+        margin-top: 40px;
     }
     .deck-info {
         padding: 20px;
@@ -111,19 +122,25 @@
     .deck-preview a {
         margin-top: 20px;
     }
+    h2 {
+        font-size: 1.2em;
+    }
+    .progress {
+        margin-bottom: 10px;
+    }
+    .progress-container {
+        width: 50%;
+        top: 75px;
+        font-size: 10px;
+    }
 }
 
-@media only screen and (max-width: 480px) {
-    body, html {
-        width: 100%;
-        height: 100%;
-        clip: auto;
-        position: absolute;
-        overflow: hidden;
-    }
+@media only screen and (max-width: 400px){
     .btn {
-        font-size: 13px;
-        padding: 10px 8px;
-        margin-top: 18px;
+        font-size: 8px;
+        padding: 12px 7px;
+    }
+    #learn-deck-btn {
+        margin-right: 0px;
     }
 }
