--- a/roleplay/static/roleplay/css/chat.css
+++ b/roleplay/static/roleplay/css/chat.css
@@ -1,6 +1,13 @@
+body, html {
+    width: 100%;
+    clip: auto;
+    position: absolute;
+    overflow-x: hidden;
+}
+
 .chat-container {
-    width: 750px;
-    height: 610px;
+    width: 80%;
+    height: auto;
     background: #eff3f7;
     margin: 50px auto;
     font-size: 0;
@@ -8,86 +15,12 @@
     overflow: hidden;
 }
 
-aside {
-    width: 260px;
-    /* height: 800px; */
-    background-color: #3b3e49;
-    display: inline-block;
-    font-size: 15px;
-    vertical-align: top;
-}
-
 .chat_window {
-    width: 490px;
+    width: 100%;
     height: auto;
-    /* height: 500px; */
     display: inline-block;
     font-size: 15px;
     vertical-align: top;
-}
-
-aside header {
-    padding: 30px 20px;
-}
-
-aside input {
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    padding: 0 50px 0 20px;
-    background-color: #5e616a;
-    border: none;
-    border-radius: 3px;
-    color: #fff;
-    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1940306/ico_search.png);
-    background-repeat: no-repeat;
-    background-position: 170px;
-    background-size: 40px;
-}
-
-aside input::placeholder {
-    color: #fff;
-}
-
-aside ul {
-    padding-left: 0;
-    margin: 0;
-    list-style-type: none;
-    /* overflow-y: scroll; */
-    height: 690px;
-}
-
-aside li {
-    padding: 10px 0;
-}
-
-aside li:hover {
-    background-color: #5e616a;
-}
-
-aside li img {
-    border-radius: 50%;
-    margin-left: 20px;
-    margin-right: 8px;
-}
-
-aside li div {
-    display: inline-block;
-    vertical-align: top;
-    margin-top: 12px;
-}
-
-aside li h2 {
-    font-size: 14px;
-    color: #fff;
-    font-weight: normal;
-    margin-bottom: 5px;
-}
-
-aside li h3 {
-    font-size: 12px;
-    color: #7e818a;
-    font-weight: normal;
 }
 
 .status {
@@ -104,7 +37,6 @@ aside li h3 {
 
 .chat_window header div {
     margin-left: 10px;
-    margin-right: 145px;
 }
 
 .chat_window header h2 {
@@ -183,11 +115,10 @@ aside li h3 {
 
 #chat .me .triangle {
     border-color: transparent transparent #6fbced transparent;
-    margin-left: 375px;
+    margin-left: 630px;
 }
 
 .chat_window footer {
-    /* height: 155px; */
     padding: 20px 30px 10px 20px;
 }
 
@@ -230,5 +161,23 @@ a:not([href]):not([tabindex]) {
 }
 
 .submit {
-    margin-left: 250px;
+    float: right;
+    margin-right: 50px;
+    padding-bottom: 10px;
+}
+
+@media only screen and (max-width: 600px){
+    .chat-container {
+        width: 95%;
+        height: 100%;
+    }
+    .submit {
+        margin-right: 0px;
+    }
+}
+
+@media only screen and (max-width: 400px){
+    .submit {
+        font-size: 13px;
+    }
 }
