Revert "try reduce bundle size buy remove users app"
This reverts commit 177c3031523faa69edb2129336c7e0cfd8a06faa.

--- a/roleplay/templates/roleplay/chat.html
+++ b/roleplay/templates/roleplay/chat.html
@@ -43,7 +43,7 @@
             <div class="submit">
                 <a class="inline-block" onclick="sendMsg()">Send</a>
                 <a class="inline-block sound" id="recordStart">Voice <i class="fa fa-microphone"></i></a>
-                <a class="inline-block end" href="{% url 'chat_review' %}">End</a>
+                <a class="inline-block end" href="{% url 'chat_review' %}">End <i class="fa-sign-out"></i></a>
             </div>
         </footer>
     </div>
