--- a/decks/static/decks/css/deck_test.css
+++ b/decks/static/decks/css/deck_test.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
-    width: 80vw;
-    height: 80vh;
+    width: 90vw;
+    height: 90vh;
 }
 
 .question-container {
@@ -216,4 +216,23 @@
 .spelling span {
     font-size: 15px;
     color: #7E7E7E;
+}
+
+@media only screen and (max-width: 600px) {
+    .question-container {
+        padding-bottom: 65px;
+    }
+    .answer-container {
+        margin-top: 20px;
+        padding-left: 0px;
+    }
+}
+
+body,
+html {
+    width: 100%;
+    height: 99%;
+    clip: auto;
+    position: absolute;
+    overflow-x: hidden;
 }
