--- a/dictionary/templates/dictionary/word_detail.html
+++ b/dictionary/templates/dictionary/word_detail.html
@@ -47,8 +47,8 @@
                         <ul>
                             {% for meaning in word.definitions %}
                             <li class="meaning">
-                                <span>{{ meaning.grammar }}</span>
-                                <p>{{ meaning.definition }}</p>
+                                <span class="grammar">{{ meaning.grammar }}</span>
+                                <p class="definition">{{ meaning.definition }}</p>
                             </li>
                             {% endfor %}
                         </ul>
@@ -80,13 +80,45 @@
             </div>
         </div>
         <div class="card d-inline-block">
-            <img src="{{ image_url }}" title="{{ image_url }}">
+            <div class="image">
+                <div style="width:100%;padding-bottom:100%;position:relative;">
+                    <iframe src="https://giphy.com/embed/JPft9h1YY4zmLc6fhn" width="100%" height="100%"
+                        style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                </div>
+            </div>
+            <br>
+            <h4 class="text-center system-message">Image loading, please wait a moment!</h4>
         </div>
     </div>
 </div>
 {% endblock %}
 
 {% block script %}
+<script>
+    window.onload = function () {
+        $.ajax({
+            url: "{% url 'get_ai_image' %}",
+            type: "POST",
+            dataType: "json",
+            data: {
+                'word': document.getElementsByClassName('definition')[0].textContent,
+            },
+            headers: {
+                "X-Requested-With": "XMLHttpRequest",
+                "X-CSRFToken": getCookie("csrftoken"),
+            },
+            success: (data) => {
+                image_url = data.image_url
+                document.getElementsByClassName('image')[0].innerHTML = `<img src="${image_url}" title="${image_url}">`;
+                document.getElementsByClassName('system-message')[0].textContent = 'Image generation succeeded !'
+            },
+            error: (error) => {
+                console.log(error);
+                document.getElementsByClassName('system-message')[0].textContent = 'Error when generating image, please try reload the page again !'
+            }
+        })
+    };
+</script>
 <script>
     var modal = document.getElementById("addToDeckModal");
     var btn = document.getElementById("addToDeckBtn");
@@ -127,7 +159,7 @@
     var elements = document.getElementsByClassName('sentence_jp');
     for (var i = 0; i < elements.length; i++) {
         const textContent = elements[i].textContent;
-        elements[i].onclick = ( ) => { return audio(textContent) } 
+        elements[i].onclick = () => { return audio(textContent) }
     }
 </script>
 {% endblock %}
