--- a/roleplay/static/roleplay/css/review.css
+++ b/roleplay/static/roleplay/css/review.css
@@ -1,10 +1,3 @@
-html,
-body {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-}
-
 .review_container {
     align-items: center;
     display: flex;
@@ -26,4 +19,12 @@ body {
 .result_box .complete_text {
     font-size: 20px;
     font-weight: 500;
+}
+
+@media only screen and (max-width: 600px){
+    html,
+    body {
+        width: 100%;
+        position: absolute;
+    }
 }
