--- a/config/templates/config/base.html
+++ b/config/templates/config/base.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1"/>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet"
