--- a/dictionary/templates/dictionary/word_detail.html
+++ b/dictionary/templates/dictionary/word_detail.html
@@ -24,7 +24,7 @@
                         {% endfor %}
                     </select>
                     <input type="hidden" name='word_id' value="{{ word_id }}" id="word_id">
-                    <input type="submit" class="btn btn-primary">
+                    <input type="submit" class="btn btn-primary add-to-deck-form-btn">
                 </form>
             </div>
         </div>
@@ -166,6 +166,8 @@
         const e = document.getElementById("deck_id");
         const deck_id = e.options[e.selectedIndex].value;
         const word_id = document.getElementById("word_id").value;
+        const addToDeckFormBtn = document.getElementsByClassName("add-to-deck-form-btn")[0];
+        addToDeckFormBtn.disabled = "disabled";
         $.ajax({
             url: "{% url 'add_card' %}",
             type: "POST",
