fix roleplay texts

--- a/roleplay/templates/roleplay/prompt_list.html
+++ b/roleplay/templates/roleplay/prompt_list.html
@@ -55,7 +55,8 @@
 <div>
     <div style="text-align: center;" class="container mb-5">
         <h1>Choose a prompt you like and let's start practicing conversation.</h1>
-        <p>Have some cool idea? Make your own prompt <a id="addPromptBtn">here</a></p>
+        <p>Let's try to use the words you are learning in conversations as much as you can.</p>
+        <p>Have some cool ideas? Make your own prompt <a id="addPromptBtn">here</a></p>
     </div>
     <div class="row">
         {% for prompt in prompts %}
