fix progress page bug

--- a/decks/templates/decks/progress.html
+++ b/decks/templates/decks/progress.html
@@ -69,7 +69,7 @@
         lineChart("learntChart", review_progress_x, review_progress_y);
     }
 
-    if(card_easiness_progress_x[0] > 0 & card_easiness_progress_x[1] > 0) {
+    if(card_easiness_progress_y[0] > 0 || card_easiness_progress_y[1] > 0) {
         pieChart("easinessChart", card_easiness_progress_x, card_easiness_progress_y);
     }
 
