add timeout error to help page

--- a/config/templates/config/help_page.html
+++ b/config/templates/config/help_page.html
@@ -33,6 +33,10 @@
                 <li>End the conversation and check the review by hitting the 'End' button.</li>
             </ul>
         </div>
+        <div class="mt-3">
+            <h2>Note: About the Timeout error:</h2>
+            <p>This chat use generative AI, so the time to generate might leads to timeout error. Please understand and use the application in good internet connection to have the best experience.</p>
+        </div>
     </div>
 </div>
 {% endblock %}
