fix help page error message

--- a/config/templates/config/help_page.html
+++ b/config/templates/config/help_page.html
@@ -35,7 +35,7 @@
         </div>
         <div class="mt-3">
             <h2>Note: About the Timeout error:</h2>
-            <p>This chat use generative AI, so the time to generate might leads to timeout error. Please understand and use the application in good internet connection to have the best experience.</p>
+            <p>This application use generative AI, so the time to generate data (especially images) might leads to timeout error. Please understand and use the application in good internet connection to have the best experience.</p>
         </div>
     </div>
 </div>
