fix check word in deck of user bug

--- a/config/templates/config/help_page.html
+++ b/config/templates/config/help_page.html
@@ -5,33 +5,16 @@
     <div class="justify-content-center mt-5">
         <h1 class="mt-3" style="text-align:center">Welcome to FluentCard, a ChatGPT-powered Flashcard Website !</h1>
         <div class="mt-3">
-            <h2>Let's start with adding your card into deck</h2>
+            <h2>Unlike other flashcard applications, we use Generative AI to enhance vocabulary learning experience</h2>
             <ul>
-                <li>First, let's create new deck by 'Add Deck' button.</li>
-                <li>Then add the word you want to learn by 'Add Card' button.</li>
-                <li>Search for any word you want to learn on our built in dictionary system.</li>
-                <li>Then, let's learn the deck by 'Learn Deck' button and answer the questions for each word.</li>
-                <li>Keep on learning everyday and check your personal progress on the 'Progress' page.</li>
+                <li>ChatGPT-generated exercise: let's review the flashcards by AI-generated exercise, only memorize but understand vocabulary better.</li>
+                <li>Dictionary: let's search for words in our built-in dictionary with official data from Jisho.org, create flashcards from words directly without extra typing.</li>
+                <li>RolePlay: let's practice using the words you are learning in communication, you can choose or create your own roleplay prompts.</li>
             </ul>
         </div>
         <div class="mt-3">
-            <h2>Let's search new words on 'Dictionary' page</h2>
-            <ul>
-                <li>Vocabulary source from Jisho.org API</li>
-                <li>Search for any word you want to learn in both English and Japanese.</li>
-                <li>Check definitions, example sentences with images and audios.</li>
-                <li>Add the word directly to the deck and start learning without wasting time creating flashcards.</li>
-            </ul>
-        </div>
-        <div class="mt-3">
-            <h2>Let's practice using the words in communication with 'RolePlay' page.</h2>
-            <ul>
-                <li>You can choose the provided prompt or create your own prompt from the list.</li>
-                <li>Click on the prompt to start the conversation.</li>
-                <li>Try to use the word you are learning as much as possible. Your word use will be recorded in the
-                    progress page.</li>
-                <li>End the conversation and check the review by hitting the 'End' button.</li>
-            </ul>
+            <h2>Quick start: Check out this video:</h2>
+            <video></video>
         </div>
         <div class="mt-3">
             <h2>Note: About the Timeout error:</h2>
