add video to help page

--- a/config/templates/config/help_page.html
+++ b/config/templates/config/help_page.html
@@ -7,14 +7,16 @@
         <div class="mt-3">
             <h2>Unlike other flashcard applications, we use Generative AI to enhance vocabulary learning experience</h2>
             <ul>
-                <li>ChatGPT-generated exercise: let's review the flashcards by AI-generated exercise, only memorize but understand vocabulary better.</li>
-                <li>Dictionary: let's search for words in our built-in dictionary with official data from Jisho.org, create flashcards from words directly without extra typing.</li>
-                <li>RolePlay: let's practice using the words you are learning in communication, you can choose or create your own roleplay prompts.</li>
+                <li>ChatGPT-generated exercises: study the flashcards by AI-generated exercise, only memorize but understand vocabulary better.</li>
+                <li>Built-in Dictionary: let's search for words in our built-in dictionary with official data from Jisho.org, create flashcards from words directly without extra typing.</li>
+                <li>Prompt based RolePlay: let's practice using the words you are learning in real conversations, you can choose or create your own roleplay prompts.</li>
             </ul>
         </div>
         <div class="mt-3">
-            <h2>Quick start: Check out this video:</h2>
-            <video></video>
+            <h2>Quick start: Check out this video to see how to navigate the application</h2>
+            <video width="80%" controls>
+                <source src="https://fluentcard.s3.ap-northeast-1.amazonaws.com/FluentCard+-+Google+Chrome+2023-12-10+12-40-06.mp4" type="video/mp4">  
+            </video>
         </div>
         <div class="mt-3">
             <h2>Note: About the Timeout error:</h2>
