--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -10,9 +10,9 @@
 	<p>If you already have an account, login <a href="{% url 'login'%}">here</a> instead.</p>
 	{% if messages %}
 	{% for message in messages %}
-	<li class="alert alert-{{ message.tags }}">
+	<div class="alert alert-{{ message.tags }}">
 		{{ message }}
-	</li>
+	</div>
 	{% endfor %}
 	{% endif %}
 	<form method="POST">
@@ -27,6 +27,7 @@
 {% block style %}
 <style>
 	@media only screen and (max-device-width: 1000px) {
+
 		body,
 		html {
 			position: absolute;
