--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -10,7 +10,9 @@
 	<p>If you already have an account, login <a href="{% url 'login'%}">here</a> instead.</p>
 	{% if messages %}
 	{% for message in messages %}
-	{{ message }}
+	<div class="alert alert-{{ message.tags }}">
+		{{ message }}
+	</div>
 	{% endfor %}
 	{% endif %}
 	<form method="POST">
